# platinum_18a_ar_xr-uark

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
assets/: index-B0aCgLGg.js  index-BOEIavjl.js  index-CDj49rtf.js  index-CEBAUACW.js  index-CEnVQcH2.js  index-CVjbQ3Fw.css  index-CWXoqMze.js  index-THZLcqbr.css  index-iNaBxmcP.js  rust_engine_bg-x2lbTCZs.wasm  rust_engine_bg.wasm
css/: styles.css
js/: app.js
markers/: 4x4_1000-0.mind
models/: AsteroidPsyche_Collision.glb  ore.glb  rock.glb
nasa-psyche-ar/: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
nasa-psyche-ar/rust_engine/: Cargo.toml
nasa-psyche-ar/rust_engine/src/: lib.rs
nasa-psyche-ar/src/: App.tsx  index.css  vite-env.d.ts
public/models/: craft_racer.glb  crystal.glb
qr/: qr.html
rust_engine/: Cargo.toml
rust_engine/src/: lib.rs
scripts/: calibration.py  compute-collision-mesh-bbox.mjs  copy-qr-to-dist.mjs  rebase-config-to-marker4.mjs  recenter-config-to-table-centroid.mjs  surface_pair_probe.py  table_rotation_probe.py
src/: App.tsx  arDepthFromMotion.ts  arSmoothAnchor.ts  index.css  main.tsx  modeConfig.ts  vite-env.d.ts
