# WASM crate: collision mesh loading, rover movement, waypoint raycasting.
[package]
name = "rust_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "XrSystem",
    "XrSession",
    "XrSessionMode",
    "XrReferenceSpace",
    "XrWebGlLayer",
    "HtmlCanvasElement",
    "WebGlRenderingContext",
    "console"
] }
# Collision detection dependencies
nalgebra = "0.32"
parry3d = "0.13"
gltf = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
