[package]
name = "rust_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "XrSystem",
    "XrSession",
    "XrSessionMode",
    "XrReferenceSpace",
    "XrWebGlLayer",
    "HtmlCanvasElement",
    "WebGlRenderingContext",
    "console"
] }
